force-app/main/default/objects/Low_Ink__e/Low_Ink__e.object-meta.xml
<CustomObject>
    <description>Low Ink event allow to detect when printer ink goes under a given threshold and triggers a new ink order</description>
    <label>Low Ink</label>
    <pluralLabel>Low Inks</pluralLabel>
</CustomObject>