force-app/main/default/objects/Low_Ink__e/fields/Ink_level__c.field-meta.xml
<CustomField>
    <fullName>Ink_level__c</fullName>
    <label>Ink level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>