force-app/main/default/objects/Low_Ink__e/fields/measure_date__c.field-meta.xml
<CustomField>
    <fullName>measure_date__c</fullName>
    <label>measure date</label>
    <type>DateTime</type>
</CustomField>