force-app/main/default/objects/Low_Ink__e/fields/Printer_Model__c.field-meta.xml
<CustomField>
    <fullName>Printer_Model__c</fullName>
    <label>Printer Model</label>
    <length>48</length>
    <type>Text</type>
</CustomField>